# phalanx

./: Cargo.toml  README.md
crates/broker/: Cargo.toml
crates/broker/src/: lib.rs
crates/broker/src/context/: context.rs
crates/broker/src/event_bus/: event_bus.rs  event_bus_old.rs  mod.rs
crates/broker/src/service/: service.rs
crates/broker/src/transporters/: base.rs  local.rs  mod.rs  nats.rs
crates/gateway/: Cargo.toml
crates/service/: Cargo.toml
crates/transporter/core/: Cargo.toml
crates/transporter/local/src/: lib.rs
crates/transporter/nats/src/: lib.rs
crates/transporters/core/: Cargo.toml
crates/transporters/core/src/: lib.rs
crates/transporters/core/src/context/: mod.rs
crates/transporters/local/: Cargo.toml
crates/transporters/local/src/: lib.rs
crates/transporters/local/src/event_bus/: event_bus.rs
crates/transporters/nats/: Cargo.toml
crates/transporters/nats/src/: lib.rs
