[package]
name = "bulb-broker"
version = "0.1.0"
edition = "2021"
keywords = ["microservices", "web", "framework"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulb-transporter-core = { path = "../transporter/core" }
bulb-transporter-local = { path = "../transporter/local" }

[dev-dependencies]
bulb-transporter-nats = { path = "../transporter/nats" }