[package]
name = "phalanx-broker"
version = "0.1.0"
edition = "2021"
keywords = ["microservices", "web", "framework"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phalanx-transporter-core = { path = "../transporters/core" }
phalanx-transporter-local = { path = "../transporters/local" }

[dev-dependencies]
phalanx-transporter-nats = { path = "../transporters/nats" }