[package]
name = "phalanx-transporter-local"
version = "0.1.0"
edition = "2021"
keywords = ["microservices", "web", "framework"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phalanx-transporter-core = { path = "../core" }
async-trait = "0"
futures = "0.3"
